# ship_collision_simulator

./: LICENSE  NOTICE.md  README.md  pyproject.toml
src/ship_collision_simulator/: __init__.py  gui.py  main.py  simulation.py
