[project]
name = "ship-collision-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Samurai-Human-Go_Jetson", email = "gotechsamurai@samurai-human-go.com" }
]
dependencies = [
    "pyside6>=6.8.0.2",
    "pybullet>=3.2.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ship_collision_simulator"]
